force-app/main/default/objects/Log_Book_Activitiy__c/Log_Book_Activitiy__c.object-meta.xml
<CustomObject>
    <description>Log Book Activitiy</description>
    <label>Log Book Activitiy</label>
    <nameField>
        <displayFormat>LBM-{YY}{MM}{DD}{00000}</displayFormat>
        <label>Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Log Book Activitiy</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>