force-app/main/default/objects/Log_Book_Activitiy__c/fields/Batch__c.field-meta.xml
<CustomField>
    <fullName>Batch__c</fullName>
    <label>Batch</label>
    <precision>1</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>