force-app/main/default/objects/Log_Book_Activitiy__c/fields/CSO_Name__c.field-meta.xml
<CustomField>
    <fullName>CSO_Name__c</fullName>
    <formula>Owner:User.FirstName +&apos; &apos;+ Owner:User.LastName</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>CSO Name</label>
    <type>Text</type>
</CustomField>