force-app/main/default/objects/Log_Book_Activitiy__c/fields/Expired__c.field-meta.xml
<CustomField>
    <fullName>Expired__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Expired setelah klik button done</description>
    <label>Expired</label>
    <type>Checkbox</type>
</CustomField>