force-app/main/default/objects/Log_Book_Activitiy__c/fields/Handling_Time__c.field-meta.xml
<CustomField>
    <fullName>Handling_Time__c</fullName>
    <description>total duration handling customer</description>
    <label>Handling Time</label>
    <length>25</length>
    <type>Text</type>
</CustomField>