force-app/main/default/objects/Log_Book_Activitiy__c/fields/Handling_Time_Not_Achieved__c.field-meta.xml
<CustomField>
    <fullName>Handling_Time_Not_Achieved__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Handling Time Not Achieved</label>
    <type>Checkbox</type>
</CustomField>