force-app/main/default/objects/Log_Book_Activitiy__c/fields/Last_seen__c.field-meta.xml
<CustomField>
    <fullName>Last_seen__c</fullName>
    <label>Last seen</label>
    <type>Date</type>
</CustomField>