force-app/main/default/objects/Log_Book_Activitiy__c/fields/Link_E_Form__c.field-meta.xml
<CustomField>
    <fullName>Link_E_Form__c</fullName>
    <label>Link E-Form</label>
    <type>Url</type>
</CustomField>