force-app/main/default/objects/Log_Book_Activitiy__c/fields/Log_Book_Date__c.field-meta.xml
<CustomField>
    <fullName>Log_Book_Date__c</fullName>
    <defaultValue>TODAY()</defaultValue>
    <description>Log book activity date</description>
    <label>Date</label>
    <required>true</required>
    <type>Date</type>
</CustomField>