force-app/main/default/objects/Log_Book_Activitiy__c/fields/NIK_Verify_Result__c.field-meta.xml
<CustomField>
    <fullName>NIK_Verify_Result__c</fullName>
    <label>NIK Verify Result</label>
    <length>255</length>
    <type>Text</type>
</CustomField>