force-app/main/default/objects/Log_Book_Activitiy__c/fields/POO_LB__c.field-meta.xml
<CustomField>
    <fullName>POO_LB__c</fullName>
    <description>Power Of One Log Book Activity</description>
    <formula>1</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>POO LB</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>