force-app/main/default/objects/Log_Book_Activitiy__c/fields/Queue_No__c.field-meta.xml
<CustomField>
    <fullName>Queue_No__c</fullName>
    <description>Queue Number</description>
    <label>Queue Number</label>
    <length>50</length>
    <required>true</required>
    <type>Text</type>
</CustomField>