force-app/main/default/objects/Log_Book_Activitiy__c/fields/Sequence_Email__c.field-meta.xml
<CustomField>
    <fullName>Sequence_Email__c</fullName>
    <defaultValue>0</defaultValue>
    <description>Sequence send email</description>
    <label>Sequence Email</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>