force-app/main/default/objects/Log_Book_Activitiy__c/fields/Sequence_SMS__c.field-meta.xml
<CustomField>
    <fullName>Sequence_SMS__c</fullName>
    <defaultValue>0</defaultValue>
    <description>Sequence Send SMS</description>
    <label>Sequence SMS</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>