force-app/main/default/objects/Log_Book_Activitiy__c/fields/Status_send__c.field-meta.xml
<CustomField>
    <fullName>Status_send__c</fullName>
    <label>Status Send</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Email</fullName>
            </value>
            <value>
                <fullName>SMS</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>