force-app/main/default/objects/Log_Book_Activitiy__c/fields/Time_In__c.field-meta.xml
<CustomField>
    <fullName>Time_In__c</fullName>
    <description>Time In Queue</description>
    <label>Time In</label>
    <required>true</required>
    <type>Time</type>
</CustomField>