force-app/main/default/objects/Log_Book_Activitiy__c/fields/Time_Out__c.field-meta.xml
<CustomField>
    <fullName>Time_Out__c</fullName>
    <description>Time finish activitiy</description>
    <label>Time Out</label>
    <type>Time</type>
</CustomField>