force-app/main/default/objects/Log_Book_Activitiy__c/fields/Time_Served__c.field-meta.xml
<CustomField>
    <fullName>Time_Served__c</fullName>
    <description>Time served activitiy</description>
    <label>Time Served</label>
    <type>Time</type>
</CustomField>