force-app/main/default/objects/Log_Book_Activitiy__c/fields/Total_Transaction__c.field-meta.xml
<CustomField>
    <fullName>Total_Transaction__c</fullName>
    <label>Total Transaction</label>
    <summaryForeignKey>Log_Book_Activitiy_Detail__c.Log_Book_Activitiy__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>