force-app/main/default/objects/Log_Book_Activitiy__c/fields/Touch_Point__c.field-meta.xml
<CustomField>
    <fullName>Touch_Point__c</fullName>
    <description>Branch location</description>
    <label>Touch Point</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Head Office</fullName>
            </value>
            <value>
                <fullName>Care Corner RS Pusat Pertamina</fullName>
            </value>
            <value>
                <fullName>CCC Bandung</fullName>
            </value>
            <value>
                <fullName>CCC Medan</fullName>
            </value>
            <value>
                <fullName>CCC Palembang</fullName>
            </value>
            <value>
                <fullName>CCC Semarang</fullName>
            </value>
            <value>
                <fullName>CCC Surabaya</fullName>
            </value>
            <value>
                <fullName>Preferred Banking Customer</fullName>
            </value>
            <value>
                <fullName>E-Mail</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>