force-app/main/default/objects/Log_Book_Activitiy__c/fields/Type__c.field-meta.xml
<CustomField>
    <fullName>Type__c</fullName>
    <defaultValue>&apos;Walk-In&apos;</defaultValue>
    <description>Look book activitiy type</description>
    <label>Type</label>
    <length>30</length>
    <type>Text</type>
</CustomField>