force-app/main/default/objects/Log_Book_Activitiy__c/fields/Waiting_Time__c.field-meta.xml
<CustomField>
    <fullName>Waiting_Time__c</fullName>
    <description>total duration waiting served</description>
    <label>Waiting Time</label>
    <length>25</length>
    <type>Text</type>
</CustomField>