force-app/main/default/objects/Log_Book_Activitiy__c/fields/Waiting_Time_Not_Achieved__c.field-meta.xml
<CustomField>
    <fullName>Waiting_Time_Not_Achieved__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Waiting Time Not Achieved</label>
    <type>Checkbox</type>
</CustomField>